feat: Add handlers for requests & new endpoints
